# federated-learning-demo

./: .gitignore  Dockerfile.client  Dockerfile.server  docker-compose.yaml  pyproject.toml  requirements.txt
fl_demo/fl_client/: main.py  model.py  settings.py
fl_demo/fl_client/database/: __init__.py  sqlite.py
fl_demo/fl_client/schemas/: __init__.py  configuration.py
fl_demo/fl_client/transformations/: __init__.py  transformations.py
fl_demo/fl_server/: main.py  settings.py
fl_demo/fl_server/client_manager/: __init__.py  client_manager.py
fl_demo/fl_server/global_model/: __init__.py  global_mlp.py
fl_demo/fl_server/routers/: client_list.py  global_weights.py
fl_demo/fl_server/schemas/: __init__.py  weights.py
fl_demo/fl_server/services/: __init__.py  client_list.py  global_weights.py
notebooks/: centralized_model_train.ipynb  compare_models.ipynb  local_models_analysis.ipynb
